# mirage

./: .dev-config.json  .gitignore  AGENTS.md  DEBUG.md  DEVELOPMENT.md  README.md  build-python-fast.py  dev.sh  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
keys/: public_key.pem
license-server/: package.json
license-server/api/: verify.js
scripts/: release.sh
src/: app.py  cleanup.py  config.py  main.py
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-ui/: App.css  App.jsx  index.css  index.html
src-ui/components/: ControlPanel.jsx  CoordinatesDisplay.jsx  DeviceSelector.jsx  DevicesPanel.jsx  LoadingScreen.jsx  LocationsPanel.jsx  MapView.jsx  SavedLocationsPanel.jsx  SearchBar.jsx  Sidebar.jsx  ToastContainer.jsx
src-ui/context/: AppContext.jsx
src-ui/utils/: countryUtils.js  tauriAPI.js  updater.js
src/api/: devices.py  location.py
src/models/: device.py  location.py
src/services/: device_service.py
src/utils/: helpers.py
