[package]
name = "mirage"
version = "2.0.3"
description = "Mirage"
authors = ["Mirage Team"]
edition = "2021"

[lib]
name = "mirage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
